<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.epam.nyekilajos.archcomppoc.ui.createaddress.CreateAddressItemFragment" />

        <variable
            name="adapter"
            type="android.widget.SpinnerAdapter" />

        <variable
            name="vm"
            type="com.epam.nyekilajos.archcomppoc.viewmodel.createaddress.CreateAddressViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/side_padding"
        android:paddingRight="@dimen/side_padding">

        <TextView
            android:id="@+id/address_details_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_medium"
            android:paddingBottom="@dimen/padding_medium"
            android:text="@string/address_details" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/address_details_title">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:text="@={vm.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/protocol_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            app:adapter="@{adapter}"
            app:layout_constraintTop_toBottomOf="@id/name_input"
            app:selectedItem="@={vm.protocol}"
            tools:listitem="@layout/selected_protocol_picker_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ip_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/protocol_picker">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/ip_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:text="@={vm.ipAddress}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/port_input"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ip_address_input">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Port"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:lines="1"
                android:text="@={vm.portText}"
                app:onImeActionDone="@{() -> fragment.createAddress()}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/TextAppearance.MaterialComponents.Button"
            android:id="@+id/create_address_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_large"
            android:onClick="@{() -> fragment.createAddress()}"
            android:text="@string/create"
            android:textColor="@android:color/primary_text_dark"
            app:layout_constraintTop_toBottomOf="@id/port_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
