<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.epam.nyekilajos.archcomppoc.util.UiUtils" />

        <import type="androidx.navigation.Navigation" />

        <variable
            name="adapter"
            type="com.epam.nyekilajos.archcomppoc.ui.adresslist.AddressAdapter" />

        <variable
            name="context"
            type="android.content.Context" />

        <variable
            name="viewmodel"
            type="com.epam.nyekilajos.archcomppoc.viewmodel.addresslist.AddressListViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/adresslist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.adresslist.AddressListFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:adapter="@{adapter}"
            app:data="@{viewmodel.addressItems}"
            app:itemDecoration="@{UiUtils.createDividerItemDecoration(context)}"
            app:itemTouchCallback="@{adapter.itemTouchCallback}"
            app:layoutManager="@{UiUtils.createLinearLayoutManager(context)}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            android:tint="@android:color/background_light"
            app:elevation="8dp"
            app:layout_anchor="@id/address_list_recycler_view"
            app:layout_anchorGravity="bottom | right"
            app:navigateToOnClick="@{@id/action_addressListFragment_to_createAddressItemFragment}"
            app:useCompatPadding="true" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
