<resources>
    <string name="app_name">ArchCompPoc</string>

    <string name="address_name">Name</string>
    <string name="ip_address">IP Address</string>
    <string name="Port">Port</string>
    <string name="address_details">Address details</string>
    <string name="create">Create</string>

    <string name="address_list">Address List</string>
    <string name="create_address">Create Address</string>

    <string name="call">Call</string>
    <string name="configure">Configure</string>
    <string name="configure_widget_title">Select target address</string>

    <string name="delete">Delete</string>

    <string name="invalid_ip_error">Invalid IP address. Please provide a valid one.</string>
    <string name="invalid_port_error">Invalid port. Please provide a valid one.</string>
    <string name="empty_name_error">Name should not be empty</string>
    <string name="name_already_used_error">You already have an address with this name. Please choose a unique one.</string>

</resources>
